--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1, h2, h3 {
 
 .container {
     background-color: white;
-    max-width: 800px;
+    max-width: 1100px;
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-areas: "profile-picture heading"
@@ -99,6 +99,14 @@ h1, h2, h3 {
     display: flex;
     justify-content: space-around;
 }
+
+.informations #loisirs #logos i {
+    border: 2px solid #404040;
+    padding: 4px;
+    border-radius: 50%;
+}
+
+
 
 
 /* ------------------ EXPERIENCES ------------------ */
