--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ h1, h2, h3 {
 }
 
 .heading #job {
-    margin-top: 5px;
+    margin-top: 2px;
     font-size: medium;
     text-transform: capitalize;
 }
@@ -169,6 +169,10 @@ h1, h2, h3 {
     flex-direction: row;
     justify-content: space-around;
     color: #555;
+}
+
+.experiences #competences .container .visit-card{
+    margin: 20px 0;
 }
 
 .experiences #competences .container .fullname {
