--- a/style.css
+++ b/style.css
@@ -107,6 +107,14 @@ h1, h2, h3 {
     border-radius: 50%;
 }
 
+.informations #loisirs #logos .fas {
+    display: flex;
+    align-items: center;
+    width: 60px;
+    height: 60px;
+    justify-content: center;
+}
+
 
 /* ------------------ EXPERIENCES ------------------ */
 
